TGR-1173: huge junk of sonarqube fixes