@@ -16,7 +16,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class RbelHttpHeaderFacet implements RbelFacet, Map<String, RbelElement> {
@@ -56,7 +55,7 @@ public class RbelHttpHeaderFacet implements RbelFacet, Map<String, RbelElement> 
                                                 .with(
                                                     RbelHtmlRenderingToolkit.addNotes(
                                                         entry.getValue()))))
-                                .collect(Collectors.toList())));
+                                .toList()));
           }
         });
   }
@@ -64,10 +63,10 @@ public class RbelHttpHeaderFacet implements RbelFacet, Map<String, RbelElement> 
   private final RbelMultiMap<RbelElement> values;
 
   public RbelHttpHeaderFacet() {
-    this.values = new RbelMultiMap();
+    this.values = new RbelMultiMap<>();
   }
 
-  public RbelHttpHeaderFacet(RbelMultiMap values) {
+  public RbelHttpHeaderFacet(RbelMultiMap<RbelElement> values) {
     this.values = values;
   }
 
@@ -88,7 +87,7 @@ public class RbelHttpHeaderFacet implements RbelFacet, Map<String, RbelElement> 
 
   @Override
   public boolean containsValue(Object value) {
-    return values.containsKey(value);
+    return values.containsValue(value);
   }
 
   @Override
@@ -124,14 +123,19 @@ public class RbelHttpHeaderFacet implements RbelFacet, Map<String, RbelElement> 
 
   @Override
   public List<RbelElement> values() {
-    return values.stream().map(Entry::getValue).collect(Collectors.toUnmodifiableList());
+    return values.stream().map(Entry::getValue).toList();
   }
 
-  /** not supported: will lose order. Use .entries() instead */
+  /**
+   * not supported: will lose order. Use .entries() instead
+   *
+   * @deprecated
+   */
   @Override
-  @Deprecated
+  @Deprecated(forRemoval = true)
   public Set<Entry<String, RbelElement>> entrySet() {
-    return values.entrySet();
+    throw new UnsupportedOperationException(
+        "This method is not supported as it would not respect the order of the entries");
   }
 
   public List<Entry<String, RbelElement>> entries() {
