@@ -10,7 +10,6 @@ import de.gematik.rbellogger.writer.tree.RbelContentTreeNode;
 import java.security.Key;
 import java.util.Collection;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.jose4j.jca.ProviderContext;
 import org.jose4j.jws.JsonWebSignature;
 import org.jose4j.lang.JoseException;
@@ -101,7 +100,7 @@ public class RbelJwtSerializer implements RbelSerializer {
                                 new String(
                                     rbelWriter.renderTree(childNode).getContent(),
                                     childNode.getElementCharset()))
-                        .collect(Collectors.toList()));
+                        .toList());
               } else {
                 jws.setHeader(
                     header.getKey().orElseThrow(),
